gather ticker data

--- a/bears_vs_market.ipynb
+++ b/bears_vs_market.ipynb
@@ -7,15 +7,329 @@
    "source": [
     "# Build a Bear Workshops vs the S&P 500\n",
     "\n",
-    "While scrolling on social media recently, I came across a post with a surprising assertion. Build a Bear Workshop Inc consistently outerperforms leading tech and AI companies in the S&P 500, including giants such as Nvidia and Palantir.\n",
+    "While scrolling on social media recently, I came across a post with a surprising assertion. Build a Bear Workshop Inc. consistently outerperforms leading tech and AI companies in the S&P 500, including giants such as Nvidia and Palantir.\n",
     "\n",
-    "This project aims to examine the accuracy of that assertion and explore the underlying factors that may explain such performance."
+    "This project aims to examine the accuracy of that assertion and explore the underlying factors that may explain such performance.\n",
+    "\n",
+    "-----"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f4b5431d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt \n",
+    "import pandas as pd \n",
+    "import yfinance as yf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "315ae083",
+   "metadata": {},
+   "source": [
+    "The companies that will be used in the initial analysis are tech & AI giants **Nvidia, Palantir, Meta, Alphabet and Microsoft.**\n",
+    "\n",
+    "- **Nvidia** and **Palantir** are fast growing stocks that have soared astronmically as a result of AI hype.\n",
+    "- In comparison, **Microsoft**, **Meta**, and **Alphabet** are all well established in the tech industry. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7a580c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\casey\\AppData\\Local\\Temp\\ipykernel_28600\\3540536383.py:4: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "  stock_data = yf.download(tickers, start= \"2020-01-01\", end = None)\n",
+      "[*********************100%***********************]  6 of 6 completed\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th>Price</th>\n",
+       "      <th colspan=\"6\" halign=\"left\">Close</th>\n",
+       "      <th colspan=\"4\" halign=\"left\">High</th>\n",
+       "      <th>...</th>\n",
+       "      <th colspan=\"4\" halign=\"left\">Open</th>\n",
+       "      <th colspan=\"6\" halign=\"left\">Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ticker</th>\n",
+       "      <th>BBW</th>\n",
+       "      <th>GOOG</th>\n",
+       "      <th>META</th>\n",
+       "      <th>MSFT</th>\n",
+       "      <th>NVDA</th>\n",
+       "      <th>PLTR</th>\n",
+       "      <th>BBW</th>\n",
+       "      <th>GOOG</th>\n",
+       "      <th>META</th>\n",
+       "      <th>MSFT</th>\n",
+       "      <th>...</th>\n",
+       "      <th>META</th>\n",
+       "      <th>MSFT</th>\n",
+       "      <th>NVDA</th>\n",
+       "      <th>PLTR</th>\n",
+       "      <th>BBW</th>\n",
+       "      <th>GOOG</th>\n",
+       "      <th>META</th>\n",
+       "      <th>MSFT</th>\n",
+       "      <th>NVDA</th>\n",
+       "      <th>PLTR</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-01-02</th>\n",
+       "      <td>2.683696</td>\n",
+       "      <td>67.903824</td>\n",
+       "      <td>208.635406</td>\n",
+       "      <td>152.791107</td>\n",
+       "      <td>5.971409</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.768892</td>\n",
+       "      <td>67.942060</td>\n",
+       "      <td>208.645346</td>\n",
+       "      <td>152.895746</td>\n",
+       "      <td>...</td>\n",
+       "      <td>205.621940</td>\n",
+       "      <td>151.040795</td>\n",
+       "      <td>5.942537</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>128300</td>\n",
+       "      <td>28132000</td>\n",
+       "      <td>12077100</td>\n",
+       "      <td>22622100</td>\n",
+       "      <td>237536000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-03</th>\n",
+       "      <td>2.683696</td>\n",
+       "      <td>67.570587</td>\n",
+       "      <td>207.531448</td>\n",
+       "      <td>150.888596</td>\n",
+       "      <td>5.875832</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.828530</td>\n",
+       "      <td>68.158566</td>\n",
+       "      <td>209.252005</td>\n",
+       "      <td>152.153771</td>\n",
+       "      <td>...</td>\n",
+       "      <td>206.079423</td>\n",
+       "      <td>150.603230</td>\n",
+       "      <td>5.851689</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>137800</td>\n",
+       "      <td>23728000</td>\n",
+       "      <td>11188400</td>\n",
+       "      <td>21116200</td>\n",
+       "      <td>205384000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-06</th>\n",
+       "      <td>2.751853</td>\n",
+       "      <td>69.236694</td>\n",
+       "      <td>211.440048</td>\n",
+       "      <td>151.278610</td>\n",
+       "      <td>5.900473</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.794452</td>\n",
+       "      <td>69.350410</td>\n",
+       "      <td>211.619059</td>\n",
+       "      <td>151.345205</td>\n",
+       "      <td>...</td>\n",
+       "      <td>205.572230</td>\n",
+       "      <td>149.423659</td>\n",
+       "      <td>5.782494</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>61700</td>\n",
+       "      <td>34646000</td>\n",
+       "      <td>17058900</td>\n",
+       "      <td>20813700</td>\n",
+       "      <td>262636000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-07</th>\n",
+       "      <td>2.632577</td>\n",
+       "      <td>69.193504</td>\n",
+       "      <td>211.897507</td>\n",
+       "      <td>149.899292</td>\n",
+       "      <td>5.971908</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.760372</td>\n",
+       "      <td>69.672723</td>\n",
+       "      <td>213.409218</td>\n",
+       "      <td>151.887418</td>\n",
+       "      <td>...</td>\n",
+       "      <td>211.658826</td>\n",
+       "      <td>151.554487</td>\n",
+       "      <td>5.928847</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>123600</td>\n",
+       "      <td>30054000</td>\n",
+       "      <td>14912400</td>\n",
+       "      <td>21634100</td>\n",
+       "      <td>314856000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-08</th>\n",
+       "      <td>2.649617</td>\n",
+       "      <td>69.738754</td>\n",
+       "      <td>214.045731</td>\n",
+       "      <td>152.287003</td>\n",
+       "      <td>5.983108</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.683696</td>\n",
+       "      <td>70.099286</td>\n",
+       "      <td>215.060170</td>\n",
+       "      <td>152.962403</td>\n",
+       "      <td>...</td>\n",
+       "      <td>211.837842</td>\n",
+       "      <td>151.183539</td>\n",
+       "      <td>5.967676</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>44400</td>\n",
+       "      <td>30560000</td>\n",
+       "      <td>13475000</td>\n",
+       "      <td>27746500</td>\n",
+       "      <td>277108000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 30 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Price          Close                                                    \\\n",
+       "Ticker           BBW       GOOG        META        MSFT      NVDA PLTR   \n",
+       "Date                                                                     \n",
+       "2020-01-02  2.683696  67.903824  208.635406  152.791107  5.971409  NaN   \n",
+       "2020-01-03  2.683696  67.570587  207.531448  150.888596  5.875832  NaN   \n",
+       "2020-01-06  2.751853  69.236694  211.440048  151.278610  5.900473  NaN   \n",
+       "2020-01-07  2.632577  69.193504  211.897507  149.899292  5.971908  NaN   \n",
+       "2020-01-08  2.649617  69.738754  214.045731  152.287003  5.983108  NaN   \n",
+       "\n",
+       "Price           High                                     ...        Open  \\\n",
+       "Ticker           BBW       GOOG        META        MSFT  ...        META   \n",
+       "Date                                                     ...               \n",
+       "2020-01-02  2.768892  67.942060  208.645346  152.895746  ...  205.621940   \n",
+       "2020-01-03  2.828530  68.158566  209.252005  152.153771  ...  206.079423   \n",
+       "2020-01-06  2.794452  69.350410  211.619059  151.345205  ...  205.572230   \n",
+       "2020-01-07  2.760372  69.672723  213.409218  151.887418  ...  211.658826   \n",
+       "2020-01-08  2.683696  70.099286  215.060170  152.962403  ...  211.837842   \n",
+       "\n",
+       "Price                                  Volume                                \\\n",
+       "Ticker            MSFT      NVDA PLTR     BBW      GOOG      META      MSFT   \n",
+       "Date                                                                          \n",
+       "2020-01-02  151.040795  5.942537  NaN  128300  28132000  12077100  22622100   \n",
+       "2020-01-03  150.603230  5.851689  NaN  137800  23728000  11188400  21116200   \n",
+       "2020-01-06  149.423659  5.782494  NaN   61700  34646000  17058900  20813700   \n",
+       "2020-01-07  151.554487  5.928847  NaN  123600  30054000  14912400  21634100   \n",
+       "2020-01-08  151.183539  5.967676  NaN   44400  30560000  13475000  27746500   \n",
+       "\n",
+       "Price                       \n",
+       "Ticker           NVDA PLTR  \n",
+       "Date                        \n",
+       "2020-01-02  237536000  NaN  \n",
+       "2020-01-03  205384000  NaN  \n",
+       "2020-01-06  262636000  NaN  \n",
+       "2020-01-07  314856000  NaN  \n",
+       "2020-01-08  277108000  NaN  \n",
+       "\n",
+       "[5 rows x 30 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tickers = ['BBW', 'NVDA', 'PLTR', 'META', 'GOOG', 'MSFT']\n",
+    "\n",
+    "# 5 years of stock data for each ticker\n",
+    "stock_data = yf.download(tickers, start= \"2020-01-01\", end = None)\n",
+    "stock_data.head() # previewing data for testing"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv (3.13.3)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
